--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~8.2.14",
     "@tinymce/tinymce-angular": "^3.3.1",
     "bootstrap": "^4.4.1",
+    "gijgo-angular-wrappers": "^1.9.13",
+    "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
